-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u40, 9
-
Component/s: hotspot
-
b64
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082713 | emb-9 | Severin Gehwolf | P4 | Resolved | Fixed | team |
| JDK-8129138 | 8u65 | Severin Gehwolf | P3 | Resolved | Fixed | b02 |
| JDK-8087177 | 8u60 | Severin Gehwolf | P3 | Resolved | Fixed | b20 |
| JDK-8137692 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b02 |
| JDK-8129662 | emb-8u60 | Severin Gehwolf | P3 | Resolved | Fixed | b20 |
| JDK-8213351 | 7u221 | Severin Gehwolf | P3 | Resolved | Fixed | b01 |
| JDK-8213788 | 7u211 | Severin Gehwolf | P3 | Resolved | Fixed | b04 |
| JDK-8134169 | openjdk7u | Severin Gehwolf | P3 | Resolved | Fixed | master |
assert(t0->isa_int()->_widen <= t->isa_int()->_widen) failed: widen increases
Note that a current fastdebug build of the hs-rt forest compiles hotspot with "-O3 -O0". Not sure why. In order to reproduce the issue, one needs to build hotspot with -DASSERT and -O3 (no -O0).
Then the reproducer in order to trigger the assertion is compiling "HelloWorld.java":
./build/linux-x86_64-normal-server-fastdebug/images/jdk/bin/javac -d . HelloWorld.java
- backported by
-
JDK-8087177 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8129138 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8129662 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8134169 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8137692 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8213351 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8213788 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-
-
JDK-8082713 JVM fastdebug build compiled with GCC 5 asserts with "widen increases"
-
- Resolved
-