8078666: JVM fastdebug build compiled with GCC 5 asserts with "widen increases"

Do the math on the unsigned type where overflows are well defined

Reviewed-by: kvn, aph